--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "web",
-  "version": "0.1.0",
+  "name": "d2ack-web",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.0.0",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^9.1.2"
+    "core-js": "^3.22.8",
+    "vue": "^2.7.14",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "^3.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@typescript-eslint/eslint-plugin": "^8.17.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-typescript": "^14.1.4",
-    "eslint": "^9.16.0",
-    "eslint-plugin-vue": "^9.32.0",
-    "typescript": "~5.7.2",
-    "vue-template-compiler": "^2.6.14"
+    "@babel/core": "^7.18.10",
+    "@babel/eslint-parser": "^7.18.9",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "@vue/cli-plugin-babel": "~4.5.15",
+    "@vue/cli-plugin-eslint": "~4.5.15",
+    "@vue/cli-plugin-typescript": "~4.5.15",
+    "@vue/cli-service": "~4.5.15",
+    "@vue/eslint-config-typescript": "^9.0.1",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^7.20.0",
+    "typescript": "^4.7.4",
+    "vue-template-compiler": "^2.7.14"
   },
   "eslintConfig": {
     "root": true,
@@ -34,9 +36,9 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/recommended",
       "eslint:recommended",
-      "@vue/typescript"
+      "@vue/typescript/recommended"
     ],
     "parserOptions": {
       "parser": "@typescript-eslint/parser"
