--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.5",
     "sass": "^1.85.1",
     "scss": "^0.2.4",
     "zustand": "^5.0.3"
