--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.67.1",
     "axios": "^1.8.1",
-    "js-cookie": "^3.0.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.5",
     "sass": "^1.85.1",
@@ -23,10 +22,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.13.8",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.19.0",
