--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@tanstack/react-query": "^5.67.1",
     "axios": "^1.8.1",
+    "clear": "^0.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "^7.1.5",
+    "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
     "sass": "^1.85.1",
     "scss": "^0.2.4",
