--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.2.0",
-    "vite-plugin-svgr": "^4.3.0"
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-svg-loader": "^5.1.0"
   }
 }
