--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.3.0",
+    "react-step-progress-bar": "^1.0.3",
     "react-toastify": "^11.0.5",
     "sass": "^1.86.0",
     "scss": "^0.2.4",
